# financial-dashboard

./: .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  README.md  TODOS.md  VERSION  docker-compose.override.yml.example  docker-compose.yml
.github/: dependabot.yml
backend/: Dockerfile  db_init.sql  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_member_settings.py  0003_property_type.py  0004_pension_accounts.py  0005_heloc_type_and_fire_member.py  0006_users_member_id_cascade.py  0007_demo_data_extension.py  0008_user_must_change_password.py  0009_investment_lot_asset_class.py  0010_pension_estimate_history.py  0011_insurance_policy_carrier_policy_number.py  0012_insurance_homeowners_renters_technical_notes.py  0013_category_slug_colors.py  0014_account_tax_treatment.py  0015_member_retirement_target_age.py  0016_budget_quarterly_period.py  0017_budgets_unique_effective_from.py  0018_household_filing_status_state.py  0019_member_social_security.py  0020_household_amt_preferences.py  0021_personal_access_tokens.py  0022_staging_transactions.py  0023_transaction_source_varchar_confidence.py  0024_category_rules.py
backend/app/: main.py
backend/app/api/v1/: accounts.py  advisory_notes.py  audit_log.py  auth.py  backups.py  budgets.py  capital_commitments.py  categories.py  category_rules.py  debt.py  equity_grants.py  exports.py  fire.py  household.py  imports.py  insurance_policies.py  investment_lots.py  members.py  ownership_entities.py  pat.py  pension.py  properties.py  reports.py  router.py  setup.py  snapshots.py  transactions.py  users.py
backend/app/core/: audit.py  config.py  encryption.py  pii.py  security.py  throttle.py  visibility.py
backend/app/db/: base.py
backend/app/db/models/: __init__.py  access_grant.py  account.py  advisory_note.py  audit_log.py  backup_job.py  budget.py  capital_commitment.py  category.py  category_rule.py  debt.py  equity_grant.py  export_job.py  fire.py  household.py  import_job.py  insurance_policy.py  investment_lot.py  member.py  ownership_entity.py  pension.py  personal_access_token.py  property_valuation.py  real_estate.py  snapshot.py  staging_transaction.py  transaction.py  user.py
backend/app/exporters/: excel_exporter.py  pdf_exporter.py
backend/app/importers/: csv_importer.py  ofx_importer.py
backend/app/repositories/: account.py  budget.py  ownership_entity.py  pension.py  real_estate.py  transaction.py
backend/app/schemas/: account.py  advisory_note.py  audit.py  auth.py  backup.py  budget.py  capital_commitment.py  category.py  category_rule.py  equity_grant.py  export_job.py  fire.py  household.py  import_job.py  insurance_policy.py  investment_lot.py  member.py  ownership_entity.py  pat.py  pension.py  provisioning.py  real_estate.py  report.py  snapshot.py  social_security.py  staging.py  tax.py  transaction.py  user.py
backend/app/services/: account.py  advisory_note.py  age.py  audit.py  auth.py  backup.py  budget.py  categorization.py  category.py  credit_line.py  debt_projector.py  debt_service.py  dedupe.py  equity_comp.py  export_service.py  fire_detector.py  fire_projector.py  fire_service.py  import_service.py  insurance_policy.py  investment_lot.py  member.py  milestone.py  ownership_entity.py  pat.py  pension.py  pension_valuation.py  private_fund.py  promote.py  provisioning.py  real_estate.py  report.py  rmd.py  roth_ladder.py  setup.py  snapshot.py  social_security.py  staging.py  state_tax.py  state_tax_tables.py  (+4 more)
backend/app/worker/: main.py  queue.py
backend/app/worker/tasks/: backup_tasks.py  export_tasks.py  import_tasks.py  valuation_tasks.py
backend/scripts/: reset_password.py  seed_demo_data.py
backend/scripts/seed_households/: _util.py  h1_chen_nakamura.py  h2_okonkwo_rivera.py  h3_whitfield_torres.py  h4_park_cole.py  h5_langford.py  h6_castellano.py  h7_brooks.py  shared_categories.py
backend/tests/: conftest.py
backend/tests/fixtures/: chase_sample.csv  sample.ofx  savings_sample.csv
backend/tests/integration/: test_accounts.py  test_age_milestones.py  test_audit_log_permissions.py  test_auth.py  test_backups.py  test_category_rules.py  test_dashboard_layout.py  test_exports.py  test_household.py  test_ingest_e2e.py  test_members.py  test_pat.py  test_phase_2.py  test_phase_2_crud.py  test_phase_3_crud.py  test_phase_3_reports.py  test_phase_4.py  test_phase_5.py  test_phase_6.py  test_phase_7.py  test_promote.py  test_provisioning.py  test_read_api_demo_extension.py  test_required_distributions.py  test_setup.py  test_smoke.py  test_social_security.py  test_staging.py  test_users.py  test_worker_backup_task.py  test_write_api_demo_extension.py
backend/tests/unit/: test_audit.py  test_categorization_matching.py  test_crud_services_coverage.py  test_csv_importer.py  test_demo_extension_services.py  test_encryption.py  test_encryption_files.py  test_estate_exposure.py  test_exporter_excel.py  test_exporter_pdf.py  test_import_tasks.py  test_investment_positions.py  test_net_worth_ownership_entity.py  test_ofx_importer.py  test_pat_security.py  test_pension_valuation.py  test_pii.py  test_report_service_helpers.py  test_repository_account.py  test_repository_pension.py  test_security.py  test_seed_demo_data.py  test_seed_h6_transaction_density.py  test_seed_net_worth_agreement.py  test_seed_rmd_eligibility.py  test_seed_seasonal_charges.py  test_seed_util.py  test_service_account.py  test_service_age.py  test_service_audit.py  test_service_auth.py  test_service_backup.py  test_service_budget.py  test_service_categorization.py  test_service_category.py  test_service_debt_projector.py  test_service_debt_service.py  test_service_export.py  test_service_fire_detector.py  test_service_fire_projector.py  (+19 more)
docs/: README.md  api-reference.md  data-model.md  (+32 more)
ingest/: pyproject.toml
ingest/hearthledger_ingest/: __init__.py  cli.py  client.py  parsers.py  pii.py
ingest/tests/: test_cli_and_client.py  test_parsers.py
(+162 files in other folders)
