[project]
name = "hearthledger-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "cryptography>=42",
    "ofxparse>=0.21",
    "openpyxl>=3.1",
    "weasyprint>=62",
    "arq>=0.25",
    "apscheduler>=3.10",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-cov>=5",
    "ruff>=0.9",
    "mypy>=1.13",
    "types-passlib>=1.7",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "S", "SIM", "RUF"]
ignore = [
    "B008",  # FastAPI Depends() in function default args — intentional pattern
    "S101",  # assert used in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
exclude = ["^alembic/"]

[[tool.mypy.overrides]]
module = [
    "jose",
    "jose.*",
    "passlib",
    "passlib.*",
    "arq",
    "arq.*",
    "apscheduler",
    "apscheduler.*",
    "ofxparse",
    "ofxparse.*",
    "weasyprint",
    "weasyprint.*",
]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
