[project]
name = "hearthledger-backend"
version = "0.9.2.1"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.2",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.6,<3.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",  # passlib 1.7.4 predates bcrypt 4.1's strict 72-byte enforcement and crashes on its own self-test
    "cryptography>=42",
    "ofxparse>=0.21",
    "python-dateutil>=2.9",
    "python-multipart>=0.0.18",
    "openpyxl>=3.1",
    "weasyprint>=62",
    "arq>=0.25",
    "apscheduler>=3.10",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-cov>=5",
    "freezegun>=1.5",
    "ruff>=0.15.18",
    "mypy>=1.13",
    "types-passlib>=1.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_also = ["pragma: no cover"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "S", "SIM", "RUF"]
ignore = [
    "B008",  # FastAPI Depends() in function default args — intentional pattern
    "S101",  # assert used in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]
"scripts/**" = ["S311", "E501", "B023"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
exclude = ["^alembic/"]

[[tool.mypy.overrides]]
module = [
    "jose",
    "jose.*",
    "passlib",
    "passlib.*",
    "arq",
    "arq.*",
    "apscheduler",
    "apscheduler.*",
    "ofxparse",
    "ofxparse.*",
    "weasyprint",
    "weasyprint.*",
    "dateutil",
    "dateutil.*",
]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
