[project]
name = "hearthledger-backend"
version = "0.9.3.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2,<3.0",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=4.0.1",  # used directly (see app/core/security.py); passlib dropped — it crashed on bcrypt 5.0's self-test
    "cryptography>=42",
    "ofxparse>=0.21",
    "python-dateutil>=2.9",
    "python-multipart>=0.0.18",
    "openpyxl>=3.1",
    "weasyprint>=62",
    "arq>=0.25",
    "apscheduler>=3.10",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-cov>=5",
    "freezegun>=1.5",
    "ruff>=0.15.19",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
# Run coverage by default so a local `pytest` enforces the same
# [tool.coverage.report] fail_under gate as CI (`pytest --cov`). When running a
# subset of tests, coverage will read low and trip the gate — pass `--no-cov`
# to skip the coverage report for that run.
addopts = "--cov --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_also = ["pragma: no cover"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "S", "SIM", "RUF"]
ignore = [
    "B008",  # FastAPI Depends() in function default args — intentional pattern
    "S101",  # assert used in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "S311"]
"scripts/**" = ["S311", "E501", "B023"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
exclude = ["^alembic/"]

[[tool.mypy.overrides]]
module = [
    "jose",
    "jose.*",
    "arq",
    "arq.*",
    "apscheduler",
    "apscheduler.*",
    "ofxparse",
    "ofxparse.*",
    "weasyprint",
    "weasyprint.*",
    "dateutil",
    "dateutil.*",
]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
