[project]
name = "hearthledger-ingest"
version = "0.1.0"
description = "Offline, privacy-first statement ingest CLI for HearthLedger. Parses exported CSV/JSON (and later, local-LLM-parsed PDF) statements and pushes canonical rows to the HearthLedger REST API over a personal access token."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "python-dateutil>=2.9",
]

[project.scripts]
hearthledger-ingest = "hearthledger_ingest.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hearthledger_ingest"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
